load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = [
        "config.go",
        "env.go",
        "model.go",
    ],
    importpath = "github.com/hika019/Pulsar-To-RDB.git/config",
    visibility = ["//visibility:public"],
    deps = ["@com_github_joho_godotenv//:go_default_library"],
)
